plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

java {
    sourceCompatibility = "17"
    targetCompatibility = "17"
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'

    // This dependency is used by the application.
    implementation 'com.google.guava:guava:30.1.1-jre'

    // Picocli
    implementation 'info.picocli:picocli:4.6.3'
    annotationProcessor 'info.picocli:picocli-codegen:4.6.3'

    // logback
    implementation 'ch.qos.logback:logback-classic:1.2.11'

    // HdrHistogram
    implementation 'org.hdrhistogram:HdrHistogram:2.1.12'

    // Agrona
    implementation 'org.agrona:agrona:1.15.1'

    // Aeron
    implementation 'io.aeron:aeron-client:1.38.1'
    implementation 'io.aeron:aeron-driver:1.38.1'
    implementation 'io.aeron:aeron-agent:1.38.1'
}

application {
    // Define the main class for the application.
    mainClass = 'jekko.Jekko'
    applicationName = 'jekko'

    applicationDefaultJvmArgs = [
        // Server hotspot vm
        "-server",

        // GC logging
        // "-Xlog:gc",
        "-Xlog:gc,gc+init",
        // "-Xlog:gc*",
        // "-Xlog:gc*::time",

        // Heap size.
        "-XX:InitialHeapSize=64m",
        "-XX:MaxHeapSize=64m",

        // JDK 17 Strongly Encapsulated JDK Internals
        // aeron
        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
    ]
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
